--- a/packages/StewardClient/src/app/pages/tools/pages/user-details/woodstock/woodstock-user-details.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/user-details/woodstock/woodstock-user-details.component.html
@@ -1,13 +1,25 @@
 <ng-container *ngIf="identity && !identity?.error; else noIdentity">
   <h1><player-identity-results [identity]="identity"></player-identity-results></h1>
-  <ng-container *waitForMonitor="getPlayFabProfileMonitor">
-    <h2>
-      PlayFab Master Account: {{ playfabProfile?.master }} PlayFab Title Account:
-      {{ playfabProfile?.title }}
-    </h2>
-  </ng-container>
   <section>
     <mat-tab-group animationDuration="0ms" (selectedTabChange)="tabChanged($event)">
+      <mat-tab *ngIf="!isSpecialXuid">
+        <ng-template mat-tab-label>
+          PlayFab
+          <inline-spinner [monitor]="getPlayFabProfileMonitor | renderGuard"></inline-spinner>
+        </ng-template>
+        <div class="sf-wrapper sf-tab-container">
+          <ng-container *waitForMonitor="getPlayFabProfileMonitor">
+            <h2>
+              Master Id: <span [hoverToCopy]="playfabProfile?.master">{{ playfabProfile?.master }}</span> <br />
+              Title Id: <span [hoverToCopy]="playfabProfile?.title">{{ playfabProfile?.title }}</span>
+            </h2>
+
+            <woodstock-playfab-transaction-history
+              [playfabPlayerTitleId]="playfabProfile?.title ?? null"
+            ></woodstock-playfab-transaction-history>
+          </ng-container>
+        </div>
+      </mat-tab>
       <mat-tab *ngIf="!isSpecialXuid" label="User Details">
         <div class="sf-wrapper sf-tab-container">
           <div class="sf-horizontal do-not-align-items">
@@ -23,13 +35,6 @@
           <woodstock-profile-notes [identity]="identity"></woodstock-profile-notes>
           <woodstock-gamertags [identity]="identity"></woodstock-gamertags>
           <woodstock-consoles [identity]="identity"></woodstock-consoles>
-        </div>
-      </mat-tab>
-      <mat-tab *ngIf="!isSpecialXuid" label="PlayFab">
-        <div class="sf-wrapper sf-tab-container">
-          <woodstock-playfab-transaction-history
-            [playfabPlayerTitleId]="playfabProfile?.title ?? null"
-          ></woodstock-playfab-transaction-history>
         </div>
       </mat-tab>
       <mat-tab *ngIf="!isSpecialXuid" label="Deep Dive">
