--- a/packages/StewardClient/src/app/shared/views/playfab-transaction-history/playfab-transaction-history.component.html
+++ b/packages/StewardClient/src/app/shared/views/playfab-transaction-history/playfab-transaction-history.component.html
@@ -3,5 +3,95 @@
     <mat-card-title>Transaction History</mat-card-title>
     <mat-card-subtitle>{{ gameTitle | humanize }}</mat-card-subtitle>
   </mat-card-header>
-  <mat-card-content> test test </mat-card-content>
+  <mat-card-content>
+    <ng-container *waitForMonitor="getTransactionsMonitor">
+      <table mat-table [dataSource]="transactionHistory">   
+        <!-- Metadata Column -->
+        <ng-container matColumnDef="metadata">
+          <th mat-header-cell *matHeaderCellDef>Metadata</th>
+          <td mat-cell *matCellDef="let transaction"> 
+            <table class="info-table">
+              <tr>
+                <th>Transaction Id</th>
+                <td>
+                  <standard-copy>{{ transaction.transactionId }}</standard-copy>
+                </td>
+              </tr>
+              <tr>
+                <th>Date UTC</th>
+                <td>
+                  <standard-copy>{{ transaction.timestamp | utcDate: 'short' }}</standard-copy>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </ng-container>
+          
+        <!-- Details Column -->
+        <ng-container matColumnDef="details">
+          <th mat-header-cell *matHeaderCellDef>Details</th>
+          <td mat-cell *matCellDef="let transaction"> 
+            <table class="info-table">
+              <tr>
+                <th>Item Type</th>
+                <td>
+                  <standard-copy>{{ transaction.itemType }}</standard-copy>
+                </td>
+              </tr>
+              <tr>
+                <th>Operation Type</th>
+                <td>
+                  <standard-copy>{{ transaction.operationType }}</standard-copy>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </ng-container>
+
+        <!-- Operations -->
+        <ng-container matColumnDef="operations">
+          <th mat-header-cell *matHeaderCellDef>Operations</th>
+          <td mat-cell *matCellDef="let transaction"> 
+            <ng-container *ngFor="let operation of transaction.operations">
+              <table class="info-table">
+                <tr>
+                  <th>Type</th>
+                  <td>
+                    <standard-copy>{{ operation?.type }}</standard-copy>
+                  </td>
+                </tr>
+                <tr>
+                  <th>Item</th>
+                  <td>
+                    <standard-copy>{{ operation?.itemName ?? 'N/A' }}</standard-copy>
+                  </td>
+                </tr>
+                <tr>
+                  <th>Item Id</th>
+                  <td>
+                    <standard-copy>{{ operation.itemId }}</standard-copy>
+                  </td>
+                </tr>
+                <tr>
+                  <th>Amount</th>
+                  <td>
+                    <standard-copy>{{ operation?.amount }}</standard-copy>
+                  </td>
+                </tr>
+                <tr>
+                  <th>Stack Id</th>
+                  <td>
+                    <standard-copy>{{ operation.stackId }}</standard-copy>
+                  </td>
+                </tr>
+              </table>
+            </ng-container>
+          </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </ng-container>
+  </mat-card-content>
 </mat-card>
