--- a/packages/StewardClient/src/app/shared/views/playfab-transaction-history/playfab-transaction-history.component.html
+++ b/packages/StewardClient/src/app/shared/views/playfab-transaction-history/playfab-transaction-history.component.html
@@ -5,11 +5,13 @@
   </mat-card-header>
   <mat-card-content>
     <ng-container *waitForMonitor="getTransactionsMonitor">
-      <table mat-table [dataSource]="transactionHistory">   
+      <mat-paginator [pageSize]="10" [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons>
+      </mat-paginator>
+      <table mat-table [dataSource]="transactionHistory">
         <!-- Metadata Column -->
         <ng-container matColumnDef="metadata">
           <th mat-header-cell *matHeaderCellDef>Metadata</th>
-          <td mat-cell *matCellDef="let transaction"> 
+          <td mat-cell *matCellDef="let transaction">
             <table class="info-table">
               <tr>
                 <th>Transaction Id</th>
@@ -26,11 +28,11 @@
             </table>
           </td>
         </ng-container>
-          
+
         <!-- Details Column -->
         <ng-container matColumnDef="details">
           <th mat-header-cell *matHeaderCellDef>Details</th>
-          <td mat-cell *matCellDef="let transaction"> 
+          <td mat-cell *matCellDef="let transaction">
             <table class="info-table">
               <tr>
                 <th>Item Type</th>
@@ -51,7 +53,7 @@
         <!-- Operations -->
         <ng-container matColumnDef="operations">
           <th mat-header-cell *matHeaderCellDef>Operations</th>
-          <td mat-cell *matCellDef="let transaction"> 
+          <td mat-cell *matCellDef="let transaction">
             <ng-container *ngFor="let operation of transaction.operations">
               <table class="info-table">
                 <tr>
@@ -88,9 +90,9 @@
             </ng-container>
           </td>
         </ng-container>
-      
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
     </ng-container>
   </mat-card-content>
