clean up APIs; attach currency names to iventory items in API rather than UI

--- a/packages/StewardClient/src/app/pages/tools/pages/user-details/woodstock/woodstock-user-details.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/user-details/woodstock/woodstock-user-details.component.html
@@ -34,6 +34,10 @@
               <span [hoverToCopy]="playfabProfile?.title">{{ playfabProfile?.title }}</span>
             </h2>
 
+            <woodstock-playfab-inventory
+              [playfabPlayerTitleId]="playfabProfile?.title ?? null"
+            ></woodstock-playfab-inventory>
+
             <woodstock-playfab-transaction-history
               [playfabPlayerTitleId]="playfabProfile?.title ?? null"
             ></woodstock-playfab-transaction-history>
