add back in removed code from bad merge

--- a/packages/StewardClient/src/app/pages/tools/pages/user-details/woodstock/woodstock-user-details.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/user-details/woodstock/woodstock-user-details.component.html
@@ -41,6 +41,10 @@
               </tr>
             </table>
 
+            <woodstock-playfab-inventory
+              [playfabPlayerTitleId]="playfabProfile?.title ?? null"
+            ></woodstock-playfab-inventory>
+
             <woodstock-playfab-transaction-history
               [playfabPlayerTitleId]="playfabProfile?.title ?? null"
             ></woodstock-playfab-transaction-history>
