--- a/packages/StewardClient/src/app/pages/tools/pages/user-details/woodstock/woodstock-user-details.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/user-details/woodstock/woodstock-user-details.component.html
@@ -19,36 +19,11 @@
           <woodstock-consoles [identity]="identity"></woodstock-consoles>
         </div>
       </mat-tab>
-      <mat-tab *ngIf="!isSpecialXuid">
-        <ng-template mat-tab-label>
-          PlayFab
-          <inline-spinner [monitor]="getPlayFabProfileMonitor | renderGuard"></inline-spinner>
-        </ng-template>
+      <mat-tab *ngIf="!isSpecialXuid" label="PlayFab">
         <div class="sf-wrapper sf-tab-container">
-          <ng-container *waitForMonitor="getPlayFabProfileMonitor">
-            <table class="info-table">
-              <tr>
-                <th>Master Id</th>
-                <td>
-                  <standard-copy>{{ playfabProfile?.master }}</standard-copy>
-                </td>
-              </tr>
-              <tr>
-                <th>Title Id</th>
-                <td>
-                  <standard-copy>{{ playfabProfile?.title }}</standard-copy>
-                </td>
-              </tr>
-            </table>
-
-            <woodstock-playfab-inventory
-              [playfabPlayerTitleId]="playfabProfile?.title ?? null"
-            ></woodstock-playfab-inventory>
-
-            <woodstock-playfab-transaction-history
-              [playfabPlayerTitleId]="playfabProfile?.title ?? null"
-            ></woodstock-playfab-transaction-history>
-          </ng-container>
+          <woodstock-playfab-player-tools
+              [xuid]="identity.xuid"
+            ></woodstock-playfab-player-tools>
         </div>
       </mat-tab>
       <mat-tab *ngIf="!isSpecialXuid" label="Deep Dive">
