add ability to select different collection ids for each playfab player tool

--- a/packages/StewardClient/src/app/pages/tools/pages/user-details/woodstock/woodstock-user-details.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/user-details/woodstock/woodstock-user-details.component.html
@@ -21,9 +21,7 @@
       </mat-tab>
       <mat-tab *ngIf="!isSpecialXuid" label="PlayFab">
         <div class="sf-wrapper sf-tab-container">
-          <woodstock-playfab-player-tools
-              [xuid]="identity.xuid"
-            ></woodstock-playfab-player-tools>
+          <woodstock-playfab-player-tools [xuid]="identity.xuid"></woodstock-playfab-player-tools>
         </div>
       </mat-tab>
       <mat-tab *ngIf="!isSpecialXuid" label="Deep Dive">
