--- a/packages/StewardClient/src/app/shared/views/playfab-player-tools/playfab-player-tools.component.scss
+++ b/packages/StewardClient/src/app/shared/views/playfab-player-tools/playfab-player-tools.component.scss
@@ -1,5 +1,14 @@
 @import '/src/styles/mixins';
 
-::ng-deep mat-card {
-  margin: $gap-medium 0;
+:host {
+  @include flex-column-fill();
+}
+
+::ng-deep .mat-card {
+  margin-bottom: $gap-medium;
+}
+
+mat-form-field {
+  width: 100%;
+  margin-top: $gap-small;
 }
