--- a/packages/StewardClient/src/app/shared/views/playfab-player-tools/woodstock/woodstock-playfab-player-tools.component.html
+++ b/packages/StewardClient/src/app/shared/views/playfab-player-tools/woodstock/woodstock-playfab-player-tools.component.html
@@ -1,4 +1,1 @@
-<playfab-player-tools
-  [service]="service"
-  [xuid]="xuid"
-></playfab-player-tools>
+<playfab-player-tools [service]="service" [xuid]="xuid"></playfab-player-tools>
