--- a/packages/StewardClient/src/app/pages/tools/pages/user-banning/pages/steelhead/steelhead-banning.component.scss
+++ b/packages/StewardClient/src/app/pages/tools/pages/user-banning/pages/steelhead/steelhead-banning.component.scss
@@ -4,10 +4,50 @@
   @include flex-column-fill();
 }
 
-.ban-action-container {
-  margin-top: $gap-medium;
+.ban-area {
+  margin-bottom: $gap-medium;
+}
 
-  .mat-checkbox {
-    margin-left: $gap-small;
+.ban-action-container {
+  margin-bottom: $gap-medium;
+  button {
+    min-width: $button-min-size;
   }
+}
+
+.ban-override-container {
+  margin-top: $gap-large;
+}
+
+.ban-override-duration-picker {
+  margin-top: $gap-large;
+}
+
+.override-field {
+  max-width: $container-width-small;
+}
+
+.ban-area {
+  label,
+  span {
+    display: block;
+  }
+}
+
+.mat-button-toggle-checked.mat-button-toggle-checked {
+  background-color: app-color-default($app-primary);
+  color: app-color-default-contrast($app-primary);
+}
+
+.warn {
+  color: app-color-default($app-warn);
+}
+
+button {
+  max-width: $button-min-size;
+  width: 100%;
+}
+
+.duration {
+  flex-grow: 0;
 }
