--- a/packages/StewardClient/src/app/shared/views/playfab-player-tools/playfab-player-tools.component.html
+++ b/packages/StewardClient/src/app/shared/views/playfab-player-tools/playfab-player-tools.component.html
@@ -39,13 +39,14 @@
     <ng-container *ngIf="getPlayFabProfileMonitor.isDone">
       <playfab-inventory
         [service]="inventoryService"
-        [playfabPlayerTitleId]="playfabProfile?.title ?? null"
+        [playfabProfile]="playfabProfile"
         [playfabCollectionId]="collectionId"
+        (inventoryChangeEvent)="inventoryChangeEvent()"
       ></playfab-inventory>
 
       <playfab-transaction-history
         [service]="transactionHistoryService"
-        [playfabPlayerTitleId]="playfabProfile?.title ?? null"
+        [playfabProfile]="playfabProfile"
         [playfabCollectionId]="collectionId"
       ></playfab-transaction-history>
     </ng-container>
