--- a/packages/StewardClient/src/app/shared/views/playfab-player-tools/components/playfab-transaction-history/playfab-transaction-history.component.html
+++ b/packages/StewardClient/src/app/shared/views/playfab-player-tools/components/playfab-transaction-history/playfab-transaction-history.component.html
@@ -2,7 +2,7 @@
   <mat-card-header>
     <mat-card-title>Transaction History</mat-card-title>
     <mat-card-subtitle
-      >{{ gameTitle | humanize }} | PlayFab Player Id: {{ playfabPlayerTitleId ?? 'N/A' }} |
+      >{{ gameTitle | humanize }} | PlayFab Player Id: {{ playfabProfile?.title ?? 'N/A' }} |
       Collection Id: {{ playfabCollectionId ?? 'N/A' }}</mat-card-subtitle
     >
   </mat-card-header>
