minor fixes; add changelog entry

--- a/packages/StewardClient/src/app/shared/views/playfab-player-tools/components/playfab-inventory/playfab-inventory.component.html
+++ b/packages/StewardClient/src/app/shared/views/playfab-player-tools/components/playfab-inventory/playfab-inventory.component.html
@@ -59,7 +59,7 @@
               <form [formGroup]="item.editFormGroup">
                 <mat-form-field>
                   <mat-label>New Amount</mat-label>
-                  <input matInput [formControl]="item.editFormControls.amount" />
+                  <input matInput [formControl]="item.editFormControls.amount" type="number" />
                   <mat-error *ngIf="item.editFormControls.amount.hasError('min')"
                     >Amount must be 0 or above
                   </mat-error>
