--- a/packages/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
@@ -46,7 +46,7 @@
       <mat-label>Timer</mat-label>
       <mat-select [formControl]="formControls.timerInstance">
         <mat-option *ngFor="let item of timerInstanceEnum | keyvalue" [value]="item.value">
-          {{ item.key }}
+          {{ item.key | deppoh }}
         </mat-option>
       </mat-select>
       <button
@@ -68,13 +68,13 @@
           class="sf-default-hint"
           appearance="fill"
         >
-          <mat-label>Select {{ selectedTimerReferenceInstance }}</mat-label>
+          <mat-label>Select {{ selectedTimerReferenceInstance | deppoh }}</mat-label>
           <mat-select [formControl]="formControls.timerReferenceId">
             <mat-option
               *ngFor="let referenceOption of timerReferenceOptions | keyvalue"
               [value]="referenceOption.key"
             >
-              {{ referenceOption.value | humanize }}
+              {{ referenceOption.value }}
             </mat-option>
           </mat-select>
         </mat-form-field>
@@ -96,6 +96,10 @@
             [formControl]="formControls.timerCustomToDate"
           ></datetime-picker>
         </div>
+        <mat-form-field appearance="fill" class="sf-default-hint">
+          <mat-label>Name</mat-label>
+          <input type="text" matInput [formControl]="formControls.timerCustomName" />
+        </mat-form-field>
       </div>
 
       <select-localized-string
