--- a/packages/StewardClient/src/app/shared/views/loyalty-rewards/woodstock/woodstock-loyalty-rewards.component.html
+++ b/packages/StewardClient/src/app/shared/views/loyalty-rewards/woodstock/woodstock-loyalty-rewards.component.html
@@ -66,6 +66,9 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
+        <div *ngIf="errorMessage" class="send-failed">
+          <mat-error class="send-error">{{ errorMessage }}</mat-error>
+        </div>
       </ng-container>
     </ng-container>
   </mat-card-content>
