--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
@@ -1,5 +1,5 @@
 <span>
-  <div class="changelog-anchor" tourAnchor="home-tour.step.three">
+  <!-- <div class="changelog-anchor" tourAnchor="home-tour.step.three"> -->
     <a
       [routerLink]="[{ outlets: { sidebar: 'changelog' } }]"
       queryParamsHandling="preserve"
@@ -15,11 +15,11 @@
         >sticky_note_2</mat-icon
       >
     </a>
-  </div>
+  <!-- </div> -->
 </span>
 <span class="short-spacer"></span>
 <span class="info">
-  <div class="docs-anchor" tourAnchor="home-tour.step.nine">
+  <!-- <div class="docs-anchor" tourAnchor="home-tour.step.nine"> -->
     <a
       href="https://confluence.turn10studios.com/x/r4GiE"
       target="_blank"
@@ -28,10 +28,10 @@
     >
       <mat-icon>info</mat-icon>
     </a>
-  </div>
+  <!-- </div> -->
 </span>
 <span>
-  <div class="contact-anchor" tourAnchor="home-tour.step.eight">
+  <!-- <div class="contact-anchor" tourAnchor="home-tour.step.eight"> -->
     <a
       [routerLink]="[{ outlets: { sidebar: 'contactus' } }]"
       queryParamsHandling="preserve"
@@ -41,11 +41,11 @@
     >
       <mat-icon>contact_support</mat-icon>
     </a>
-  </div>
+  <!-- </div> -->
 </span>
 <span class="short-spacer"></span>
 <span>
-  <div class="settings-anchor" tourAnchor="home-tour.step.two">
+  <!-- <div class="settings-anchor" tourAnchor="home-tour.step.two"> -->
     <a
       [routerLink]="[{ outlets: { sidebar: 'settings' } }]"
       queryParamsHandling="preserve"
@@ -60,7 +60,7 @@
         >settings</mat-icon
       >
     </a>
-  </div>
+  <!-- </div> -->
 </span>
 
 <span>
