--- a/packages/StewardClient/src/app/pages/tools/components/navbar/navbar.component.html
+++ b/packages/StewardClient/src/app/pages/tools/components/navbar/navbar.component.html
@@ -7,6 +7,7 @@
       routerLinkActive="stroked-icon-button"
       [ngSwitch]="environmentWarningOption"
       class="home-icon"
+      tourAnchor="home-tour.step.one"
     >
       <mat-icon
         *ngSwitchCase="'warn'"
