--- a/packages/StewardClient/src/app/pages/tools/components/navbar/navbar.component.html
+++ b/packages/StewardClient/src/app/pages/tools/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     routerLinkActive="stroked-icon-button"
     [ngSwitch]="environmentWarningOption"
     class="home-icon"
-    tourAnchor="home-tour.step.one"
+    tourAnchor="shared-tour.nav"
   >
     <mat-icon
       *ngSwitchCase="'warn'"
