mostly working UI, needs minor beautification Found issue with API, following up with Caleb

--- a/packages/StewardClient/src/app/pages/tools/pages/user-details/steelhead/steelhead-user-details.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/user-details/steelhead/steelhead-user-details.component.html
@@ -59,6 +59,7 @@
             [identity]="identity"
             [profile]="profile"
           ></steelhead-skill-rating>
+          <steelhead-ugc-profile [identity]="identity" [profile]="profile"></steelhead-ugc-profile>
           <mat-card>
             <mat-card-header>
               <mat-card-title>Profile Inventory</mat-card-title>
