--- a/packages/StewardClient/src/styles/global/steward-layout/standard-form.scss
+++ b/packages/StewardClient/src/styles/global/steward-layout/standard-form.scss
@@ -18,7 +18,8 @@
     margin: $gap-small;
 
     > * {
-      margin: $gap-small;
+      display: block;
+      margin: $gap-medium $gap-small;
     }
   }
 
