--- a/packages/StewardClient/src/app/pages/tools/components/navbar/navbar.component.scss
+++ b/packages/StewardClient/src/app/pages/tools/components/navbar/navbar.component.scss
@@ -86,12 +86,12 @@
 }
 
 // introduce a stacking context
-.stack-context-relative {
+.tours-stack-context-relative {
   position: relative;
 }
 
 // cover our element, with a bit to go around it.
-.no-size-wrapper {
+.tours-no-size-wrapper {
   $wrap-margin: .25em;
   position: absolute;
   top: -$wrap-margin;
